--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,18 @@
+name: Deploy
 on: workflow_dispatch
-job:
-  permissions:
-    id-token: write # This is required to allow the GitHub Action to authenticate with Deno Deploy.
-    contents: read
-  steps:
-    - name: Deploy to Deno Deploy
-      uses: denoland/deployctl@v1
-      with:
-        project: ${{secrets.PROJECT}} # the name of the project on Deno Deploy
-        entrypoint: index.ts # the entrypoint to deploy
-      env:
-        SID: ${{secrets.SID}}
-        SOURCE_PROJECT_NAME: ${{secrets.SOURCE_PROJECT_NAME}}
-        DESTINATION_PROJECT_NAME: ${{secrets.DESTINATION_PROJECT_NAME}}
+jobs:
+  Deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write # This is required to allow the GitHub Action to authenticate with Deno Deploy.
+      contents: read
+    steps:
+      - name: Deploy to Deno Deploy
+        uses: denoland/deployctl@v1
+        with:
+          project: ${{secrets.PROJECT}} # the name of the project on Deno Deploy
+          entrypoint: index.ts # the entrypoint to deploy
+        env:
+          SID: ${{secrets.SID}}
+          SOURCE_PROJECT_NAME: ${{secrets.SOURCE_PROJECT_NAME}}
+          DESTINATION_PROJECT_NAME: ${{secrets.DESTINATION_PROJECT_NAME}}
