--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: ${{secrets.PROJECT}} # the name of the project on Deno Deploy
-          entrypoint: index.ts # the entrypoint to deploy
+          entrypoint: ./index.ts # the entrypoint to deploy
         env:
           SID: ${{secrets.SID}}
           SOURCE_PROJECT_NAME: ${{secrets.SOURCE_PROJECT_NAME}}
